Fix tables and horizontal scrolling

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -62,7 +62,7 @@ main {
 
     @media (max-width: 1024px) {
         article {
-            max-width: 100%;
+            max-width: calc(100% - 2rem);
             margin: 1rem;
         }
         .toc {
